--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "url": "git+https://github.com/lukechilds/keyv-redis.git"
   },
   "keywords": [
+    "redis",
+    "keyv",
+    "storage",
+    "adapter",
     "key",
     "value",
     "store",
     "cache",
-    "ttl",
-    "redis"
+    "ttl"
   ],
   "author": "Luke Childs <lukechilds123@gmail.com> (http://lukechilds.co.uk)",
   "license": "MIT",
