--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "coveralls": "^2.13.1",
     "delay": "^2.0.0",
     "eslint-config-xo-lukechilds": "^1.0.0",
-    "keyv": "^0.1.3",
+    "keyv": "*",
+    "keyv-api-tests": "*",
     "nyc": "^10.3.2",
     "xo": "^0.19.0"
   }
