--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
   "xo": {
     "extends": "xo-lukechilds"
   },
+  "ava": {
+    "require": [
+      "requireable"
+    ]
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/lukechilds/keyv-redis.git"
@@ -43,6 +48,7 @@
     "keyv": "*",
     "keyv-test-suite": "^1.3.0",
     "nyc": "^10.3.2",
+    "requireable": "^0.3.0",
     "xo": "^0.19.0"
   }
 }
