--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "keyv-test-suite": "^1.3.0",
     "nyc": "^11.0.3",
     "requireable": "^0.3.0",
+    "this": "^1.0.2",
     "xo": "^0.19.0"
   }
 }
