--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "ava": {
     "require": [
-      "requireable"
+      "requirable"
     ]
   },
   "repository": {
@@ -48,7 +48,7 @@
     "keyv": "*",
     "keyv-test-suite": "^1.3.0",
     "nyc": "^11.0.3",
-    "requireable": "^0.3.0",
+    "requirable": "^0.3.0",
     "this": "^1.0.2",
     "xo": "^0.19.0"
   }
