--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "delay": "^2.0.0",
     "eslint-config-xo-lukechilds": "^1.0.0",
     "keyv": "*",
-    "keyv-test-suite": "^1.3.0",
+    "@keyv/test-suite": "^1.3.0",
     "nyc": "^11.0.3",
     "requirable": "^1.0.4",
     "this": "^1.0.2",
