--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/lukechilds/@keyv/redis.git"
+    "url": "git+https://github.com/lukechilds/keyv-redis.git"
   },
   "keywords": [
     "redis",
@@ -33,9 +33,9 @@
   "author": "Luke Childs <lukechilds123@gmail.com> (http://lukechilds.co.uk)",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/lukechilds/@keyv/redis/issues"
+    "url": "https://github.com/lukechilds/keyv-redis/issues"
   },
-  "homepage": "https://github.com/lukechilds/@keyv/redis",
+  "homepage": "https://github.com/lukechilds/keyv-redis",
   "dependencies": {
     "pify": "3.0.0",
     "redis": "2.8.0"
