Allow testing on non-localhost Redis, add docker config (#27)

--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "src/index.js",
   "scripts": {
     "test": "xo && nyc ava",
+    "test:docker": "docker-compose up --build --abort-on-container-exit --exit-code-from test",
+    "posttest:docker": "docker-compose down --rmi local",
     "coverage": "nyc report --reporter=text-lcov | coveralls"
   },
   "xo": {
