--- a/package.json
+++ b/package.json
@@ -1,16 +1,15 @@
 {
-  "name": "@keyv/redis",
+  "name": "@microlink/keyv-redis",
   "version": "2.1.2",
   "description": "Redis storage adapter for Keyv",
   "main": "src/index.js",
   "scripts": {
-    "test": "xo && nyc ava",
+    "lint": "standard-markdown README.md && standard",
+    "pretest": "npm run lint",
+    "test": "nyc ava",
     "test:docker": "docker-compose up --build --abort-on-container-exit --exit-code-from test",
     "posttest:docker": "docker-compose down --rmi local",
     "coverage": "nyc report --reporter=text-lcov | coveralls"
-  },
-  "xo": {
-    "extends": "xo-lukechilds"
   },
   "ava": {
     "require": [
@@ -19,7 +18,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/lukechilds/keyv-redis.git"
+    "url": "git+https://github.com/microlinkhq/keyv-redis.git"
   },
   "keywords": [
     "redis",
@@ -35,22 +34,22 @@
   "author": "Luke Childs <lukechilds123@gmail.com> (http://lukechilds.co.uk)",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/lukechilds/keyv-redis/issues"
+    "url": "https://github.com/microlinkhq/keyv-redis/issues"
   },
-  "homepage": "https://github.com/lukechilds/keyv-redis",
-  "dependencies": {
-    "ioredis": "~4.17.1"
-  },
+  "homepage": "https://github.com/microlinkhq/keyv-redis",
   "devDependencies": {
-    "ava": "^2.4.0",
-    "coveralls": "^3.0.7",
-    "delay": "^4.3.0",
-    "eslint-config-xo-lukechilds": "^1.0.1",
-    "keyv": "*",
-    "@keyv/test-suite": "^1.6.11",
-    "nyc": "^14.1.1",
-    "requirable": "^1.0.5",
-    "this": "^1.1.0",
-    "xo": "^0.25.3"
+    "ava": "latest",
+    "coveralls": "latest",
+    "standard": "latest",
+    "standard-markdown": "latest",
+    "delay": "latest",
+    "keyv": "latest",
+    "@keyv/test-suite": "latest",
+    "nyc": "latest",
+    "requirable": "latest",
+    "this": "latest"
+  },
+  "peerDependencies": {
+    "ioredis": "4"
   }
 }
