--- a/package.json
+++ b/package.json
@@ -1,53 +1,104 @@
 {
   "name": "@microlink/keyv-redis",
-  "version": "2.1.2",
   "description": "Redis storage adapter for Keyv",
+  "homepage": "https://github.com/microlinkhq/keyv-redis",
+  "version": "2.1.2",
   "main": "src/index.js",
+  "author": {
+    "email": "lukechilds123@gmail.com",
+    "name": "Luke Childs",
+    "url": "http://lukechilds.co.uk"
+  },
+  "contributors": [
+    {
+      "name": "Kiko Beats",
+      "email": "josefrancisco.verdu@gmail.com"
+    },
+    {
+      "name": "Casey Webb",
+      "email": "notcaseywebb@gmail.com"
+    }
+  ],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/microlinkhq/keyv-redis.git"
+  },
+  "bugs": {
+    "url": "https://github.com/microlinkhq/keyv-redis/issues"
+  },
+  "keywords": [
+    "adapter",
+    "cache",
+    "key",
+    "keyv",
+    "redis",
+    "storage",
+    "store",
+    "ttl",
+    "value"
+  ],
+  "devDependencies": {
+    "@commitlint/cli": "latest",
+    "@commitlint/config-conventional": "latest",
+    "@keyv/test-suite": "latest",
+    "ava": "latest",
+    "ci-publish": "latest",
+    "conventional-github-releaser": "latest",
+    "coveralls": "latest",
+    "delay": "latest",
+    "finepack": "latest",
+    "git-authors-cli": "latest",
+    "husky": "latest",
+    "keyv": "latest",
+    "lint-staged": "latest",
+    "npm-check-updates": "latest",
+    "nyc": "latest",
+    "requirable": "latest",
+    "standard": "latest",
+    "standard-markdown": "latest",
+    "standard-version": "latest",
+    "this": "latest"
+  },
+  "files": [
+    "src"
+  ],
   "scripts": {
+    "contributors": "(git-authors-cli && finepack && git add package.json && git commit -m 'build: contributors' --no-verify) || true",
+    "coverage": "nyc report --reporter=text-lcov | coveralls",
     "lint": "standard-markdown README.md && standard",
+    "postrelease": "npm run release:tags && npm run release:github && ci-publish",
+    "posttest:docker": "docker-compose down --rmi local",
+    "prerelease": "npm run update:check && npm run contributors",
     "pretest": "npm run lint",
+    "release": "standard-version -a",
+    "release:github": "conventional-github-releaser -p angular",
+    "release:tags": "git push --follow-tags origin HEAD:master",
     "test": "nyc ava",
     "test:docker": "docker-compose up --build --abort-on-container-exit --exit-code-from test",
-    "posttest:docker": "docker-compose down --rmi local",
-    "coverage": "nyc report --reporter=text-lcov | coveralls"
+    "update": "ncu -u",
+    "update:check": "ncu -- --error-level 2"
   },
+  "license": "MIT",
   "ava": {
     "require": [
       "requirable"
     ]
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/microlinkhq/keyv-redis.git"
+  "commitlint": {
+    "extends": [
+      "@commitlint/config-conventional"
+    ]
   },
-  "keywords": [
-    "redis",
-    "keyv",
-    "storage",
-    "adapter",
-    "key",
-    "value",
-    "store",
-    "cache",
-    "ttl"
-  ],
-  "author": "Luke Childs <lukechilds123@gmail.com> (http://lukechilds.co.uk)",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/microlinkhq/keyv-redis/issues"
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
+      "pre-commit": "lint-staged"
+    }
   },
-  "homepage": "https://github.com/microlinkhq/keyv-redis",
-  "devDependencies": {
-    "ava": "latest",
-    "coveralls": "latest",
-    "standard": "latest",
-    "standard-markdown": "latest",
-    "delay": "latest",
-    "keyv": "latest",
-    "@keyv/test-suite": "latest",
-    "nyc": "latest",
-    "requirable": "latest",
-    "this": "latest"
+  "lint-staged": {
+    "package.json": [
+      "finepack"
+    ]
   },
   "peerDependencies": {
     "ioredis": "4"
