--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "finepack": "latest",
     "git-authors-cli": "latest",
     "husky": "latest",
+    "ioredis": "latest",
     "keyv": "latest",
     "lint-staged": "latest",
     "npm-check-updates": "latest",
@@ -77,11 +78,6 @@
     "update:check": "ncu -- --error-level 2"
   },
   "license": "MIT",
-  "ava": {
-    "require": [
-      "requirable"
-    ]
-  },
   "commitlint": {
     "extends": [
       "@commitlint/config-conventional"
